Add support for cross compilation with Mingw
This changes allows me to cross compile Mosquitto on my Linux host for
Windows 32/64 bit targets using MXE (mxe.cc).

Signed-off-by: Petr Štetiar <ynezz@true.cz>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,7 @@ set (VERSION 1.5.5)
 
 add_definitions (-DCMAKE -DVERSION=\"${VERSION}\")
 
-if (WIN32)
+if (WIN32 AND NOT MINGW)
 	set (BINDIR .)
 	set (SBINDIR .)
 	set (SYSCONFDIR .)
@@ -27,7 +27,7 @@ if (WIN32)
 	set (PKGCONFIGDIR "${LIBDIR}/pkgconfig")
 	add_definitions("-D_CRT_SECURE_NO_WARNINGS")
 	add_definitions("-D_CRT_NONSTDC_NO_DEPRECATE")
-else (WIN32)
+else (WIN32 AND NOT MINGW)
 	set (BINDIR bin)
 	set (SBINDIR sbin)
 	if ("${CMAKE_INSTALL_PREFIX}" STREQUAL /usr)
@@ -43,7 +43,11 @@ else (WIN32)
 	set (MANDIR "${DATAROOTDIR}/man")
 	set (SHAREDIR "${DATAROOTDIR}/mosquitto")
 	set (PKGCONFIGDIR "${LIBDIR}/pkgconfig")
-endif (WIN32)
+endif (WIN32 AND NOT MINGW)
+
+if (MINGW)
+	add_definitions(-D_WIN32_WINNT=_WIN32_WINNT_VISTA)
+endif (MINGW)
 
 option(WITH_TLS
 	"Include SSL/TLS support?" ON)
@@ -76,14 +80,14 @@ option(WITH_SRV "Include SRV lookup support?" OFF)
 option(WITH_THREADING "Include client library threading support?" ON)
 if (${WITH_THREADING} STREQUAL ON)
 	add_definitions("-DWITH_THREADING")
-	if (WIN32)
+	if (WIN32 AND NOT MINGW)
 		if (CMAKE_CL_64)
 			set (PTHREAD_LIBRARIES C:\\pthreads\\Pre-built.2\\lib\\x64\\pthreadVC2.lib)
 		else (CMAKE_CL_64)
 			set (PTHREAD_LIBRARIES C:\\pthreads\\Pre-built.2\\lib\\x86\\pthreadVC2.lib)
 		endif (CMAKE_CL_64)
 		set (PTHREAD_INCLUDE_DIR C:\\pthreads\\Pre-built.2\\include)
-	else (WIN32)
+	else (WIN32 AND NOT MINGW)
 		find_library(LIBPTHREAD pthread)
 		if (LIBPTHREAD)
 			set (PTHREAD_LIBRARIES pthread)
@@ -91,7 +95,7 @@ if (${WITH_THREADING} STREQUAL ON)
 			set (PTHREAD_LIBRARIES "")
 		endif()
 		set (PTHREAD_INCLUDE_DIR "")
-	endif (WIN32)
+	endif (WIN32 AND NOT MINGW)
 else (${WITH_THREADING} STREQUAL ON)
 	set (PTHREAD_LIBRARIES "")
 	set (PTHREAD_INCLUDE_DIR "")
