--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,10 @@ if (WIN32)
 	add_definitions("-D_CRT_NONSTDC_NO_DEPRECATE")
 endif (WIN32)
 
+if (MINGW)
+	add_definitions(-D_WIN32_WINNT=_WIN32_WINNT_VISTA)
+endif (MINGW)
+
 include(GNUInstallDirs)
 
 option(WITH_BUNDLED_DEPS "Build with bundled dependencies?" ON)
@@ -57,14 +61,14 @@ option(WITH_PIC "Build the static library with PIC (Position Independent Code) e
 option(WITH_THREADING "Include client library threading support?" ON)
 if (WITH_THREADING)
 	add_definitions("-DWITH_THREADING")
-	if (WIN32)
+	if (WIN32 AND NOT MINGW)
 		if (CMAKE_CL_64)
 			set (PTHREAD_LIBRARIES C:\\pthreads\\Pre-built.2\\lib\\x64\\pthreadVC2.lib)
 		else (CMAKE_CL_64)
 			set (PTHREAD_LIBRARIES C:\\pthreads\\Pre-built.2\\lib\\x86\\pthreadVC2.lib)
 		endif (CMAKE_CL_64)
 		set (PTHREAD_INCLUDE_DIR C:\\pthreads\\Pre-built.2\\include)
-	else (WIN32)
+	else (WIN32 AND NOT MINGW)
 		find_library(LIBPTHREAD pthread)
 		if (LIBPTHREAD)
 			set (PTHREAD_LIBRARIES pthread)
@@ -72,7 +76,7 @@ if (WITH_THREADING)
 			set (PTHREAD_LIBRARIES "")
 		endif()
 		set (PTHREAD_INCLUDE_DIR "")
-	endif (WIN32)
+	endif (WIN32 AND NOT MINGW)
 else (WITH_THREADING)
 	set (PTHREAD_LIBRARIES "")
 	set (PTHREAD_INCLUDE_DIR "")
